Titian Tradenodes and GroupFileOpen Comments
Finished the trade regions of the Titian Dominion and added comments throughout the GroupFileOpen file

--- a/Dominons/localisation/dom_tradenodes_l_english.yml
+++ b/Dominons/localisation/dom_tradenodes_l_english.yml
@@ -3,3 +3,24 @@
  dom_node_B:0 "River Penensula"
  dom_node_C:0 "Something Something"
  dom_node_D:0 "Smaller Island"
+ dom_node_E:0 "Blood Lake"
+ dom_node_F:0 "Five Rivers' End"
+ dom_node_G:0 "Mountain Trade"
+ dom_node_H:0 "River Split"
+ dom_node_I:0 "East coast"
+ dom_node_J:0 "Lower Sack"
+ dom_node_K:0 "Strait of North East"
+ dom_node_L:0 "Brass"
+ dom_node_M:0 "Masdi"
+ dom_node_N:0 "Strait of West"
+ dom_node_O:0 "Land of Sytr"
+ dom_node_P:0 "Gulf of Things"
+ dom_node_Q:0 "The Trident"
+ dom_node_R:0 "Wormborn"
+ dom_node_S:0 "North"
+ dom_node_T:0 "Top Gulf"
+ dom_node_U:0 "Chulaguutia Trade Zone"
+ dom_node_V:0 "Moutain Gold"
+ dom_node_W:0 "Thondia"
+ dom_node_X:0 "Gulf of Bla"
+ dom_node_Y:0 "West Coast"
